tests/baselines/reference/constructorWithCapturedSuper.errors.txt
tests/cases/compiler/constructorWithCapturedSuper.ts(11,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
tests/cases/compiler/constructorWithCapturedSuper.ts(32,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
tests/cases/compiler/constructorWithCapturedSuper.ts(44,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.


==== tests/cases/compiler/constructorWithCapturedSuper.ts (3 errors) ====
    let oneA: A;
    
    class A {
        constructor() {
            return oneA;
        }
    }
    
    class B extends A {
        constructor(x: number) {
            super();
            ~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
            if (x === 1) {
                return;
            }
            while (x < 2) {
                return;
            }
            try {
                return
            }
            catch (e) {
                return;
            }
            finally {
                return;
            }
        }
    }
    
    class C extends A {
        constructor(x: number) {
            super();
            ~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
            for (let i = 0; i < 10; ++i) {
                () => i + x;
                if (x === 1) {
                    return;
                } 
            }
        }
    }
    
    class D extends A {
        constructor(x: number) {
            super();
            ~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'.
            () => {
                return;
            }
            function foo() {
                return;
            }
        }
    }